Make issuer discovery API-only
